k8s/microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-task
  template:
    metadata:
      labels:
        app: microservice-task
    spec:
      containers:
      - name: microservice-task
        image: localhost:32000/microservice-task:latest
        ports:
        - containerPort: 8000
