k8s/microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-task-service
spec:
  selector:
    app: microservice-task
  ports:
    - port: 8000
      targetPort: 8000
